Stats & Win trends Splitted

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="/">Home</a>
-            <a href="/Teamdata">Team Data</a>
+            <a href="/TeamData">Team Data</a>
             <a href="/Privacy">Privacy</a>
         </nav>
     </header>
