--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -10,7 +10,7 @@
     <p>Your one-stop platform for comprehensive MLB statistics.</p>
 
     <div class="buttons">
-        <a class="btn" href="/Teamdata">View Team Data</a>
+        <a class="btn" href="/TeamData">View Team Data</a>
         <a class="btn secondary" href="/Privacy">Privacy Policy</a>
     </div>
 </div>
