--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,20 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - StrikeData</title>
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
+
 <body>
     <header>
         <nav>
             <a href="/">Home</a>
             <a href="/TeamData">Team Data</a>
-            <a href="/Privacy">Privacy</a>
+           <!-- <a href="/Privacy">Privacy</a> -->
         </nav>
     </header>
     <main>
+        <!-- AQUÍ SE ESTABLECERÁ EL CONTENIDO DE CADA PLANTILLA HIJA-->
         @RenderBody()
     </main>
     <footer>
