--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using StrikeData
 @namespace StrikeData.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@* 
+El archivo _ViewImports.cshtml sirve para importar espacios de nombres, 
+directivas y configuraciones comunes a todas las vistas. Es como un archivo de configuración que evita repetir código en cada vista. 
+*@
