--- a/Pages/_ViewStart.cshtml
+++ b/Pages/_ViewStart.cshtml
@@ -1,3 +1,5 @@
 ﻿@{
     Layout = "_Layout";
 }
+
+@* Determina la configuración inicial para las vistas, como el diseño o layout que usarán por defecto. *@
