--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,6 @@
 
     <div class="buttons">
         <a class="btn" href="/TeamData">View Team Data</a>
-        <a class="btn secondary" href="/Privacy">Privacy Policy</a>
+        <!-- <a class="btn secondary" href="/Privacy">Privacy Policy</a>-->
     </div>
 </div>
