--- a/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,7 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+﻿<!-- Este archivo contiene librerías de validación de formularios en el lado del cliente en aplicaciones ASP.NET Core.-->
+
+<!-- Permite validar campos de formularios (texto vacío, email incorrecto, etc.) sin necesidad de enviar el formulario al servidor. -->
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+
+<!-- Hace que las anotaciones de validación en tus modelos C# ([Required], [Range]...) se traduzcan automáticamente a validaciones JavaScript en el navegador, sin que tengas que escribir JS manualmente. -->
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
