--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,6 @@
 
     <div class="buttons">
         <a class="btn" href="/TeamData">View Team Data</a>
-        <!-- <a class="btn secondary" href="/Privacy">Privacy Policy</a>-->
+        <!-- TODO: DESCOMENTAR EN CASO QUE VAYA A PONER ALGO EN LA POLÍTICA DE PRIVACIDAD <a class="btn secondary" href="/Privacy">Privacy Policy</a>-->
     </div>
 </div>
