--- a/Pages/TeamData/WinTrends.cshtml
+++ b/Pages/TeamData/WinTrends.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h1 class="page-title">Win Trends</h1>
+<p class="lead">This page displays the win trends of teams in the league.</p>
 
+@* 
 <table class="table">
     <thead>
         <tr>
@@ -24,4 +26,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table> *@
