--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,8 +12,9 @@
     <header>
         <nav>
             <a href="/">Home</a>
-            <a href="/TeamData">Team Data</a>
-           <!-- <a href="/Privacy">Privacy</a> -->
+            <a href="/TeamData">Teams</a>
+            <a href="/">Players</a>
+            <a href="/">Schedule</a>
         </nav>
     </header>
     <main>
