--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model StrikeData.Pages.IndexModel
 @{
-    ViewData["Title"] = "Welcome to StrikeData";
+    ViewData["Title"] = "StrikeData";
 }
 
 <div class="welcome">
