--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -4,9 +4,14 @@
     ViewData["Title"] = "Team Data";
 }
 
-<h1 class="page-title">Team Data Sections</h1>
+<div class="welcome">
+    <img src="/images/MLB_teams.jpg" alt="Baseball" />
+    <h1 class="page-title">Team Data</h1>
 
-<div class="buttons">
-    <a class="btn" href="/TeamData/WinTrends">Win Trends</a>
-    <a class="btn" href="/TeamData/Stats">Stats</a>
+    <div class="buttons">
+        <a class="btn" href="/TeamData/">Records</a>
+        <a class="btn" href="/TeamData/Stats">Batting</a>
+        <a class="btn" href="/TeamData/">Pitching</a>
+        <a class="btn" href="/TeamData/">Fielding</a>
+    </div>
 </div>
