--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - StrikeData</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" type="image/png" href="~/images/baseball.png">
 </head>
 
 <body>
