--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -10,7 +10,7 @@
 
     <div class="buttons">
         <a class="btn" href="/TeamData/">Records</a>
-        <a class="btn" href="/TeamData/Stats">Batting</a>
+        <a class="btn" href="/TeamData/Batting">Batting</a>
         <a class="btn" href="/TeamData/">Pitching</a>
         <a class="btn" href="/TeamData/">Fielding</a>
     </div>
