Pitching Section Error

--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="buttons">
         <a class="btn" href="/TeamData/">Records</a>
         <a class="btn" href="/TeamData/Hitting">Hitting</a>
-        <a class="btn" href="/TeamData/">Pitching</a>
+        <a class="btn" href="/TeamData/Pitching">Pitching</a>
         <a class="btn" href="/TeamData/">Fielding</a>
     </div>
 </div>
