--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -123,6 +123,17 @@ footer {
     color: #ffffff;
 }
 
+.btn-stat-toggle {
+    border-radius: 0.25rem;
+    margin-right: 0.5rem;
+    padding: 0.4rem 0.8rem;
+    color: #fff;
+    background-color: #007bff;
+    border: 1px solid transparent;
+}
+.btn-stat-toggle.inactive {
+    background-color: #6c757d; /* gris para el inactivo */
+}
 
 
 /* Estilos para las tablas */
@@ -206,6 +217,15 @@ footer {
     background-color: #f3f4f6;
     color: #374151;
     cursor: pointer;
+}
+
+.pitching-table {
+    font-size: 1.0rem;
+}
+.pitching-table th,
+.pitching-table td {
+    padding: 0.75rem;
+    white-space: nowrap; /* evita saltos de línea */
 }
 
 /* Ocultar tablas no seleccionadas */
