--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -12,6 +12,6 @@
         <a class="btn" href="/TeamData/">Records</a>
         <a class="btn" href="/TeamData/Hitting">Hitting</a>
         <a class="btn" href="/TeamData/Pitching">Pitching</a>
-        <a class="btn" href="/TeamData/">Fielding</a>
+        <a class="btn" href="/TeamData/Fielding">Fielding</a>
     </div>
 </div>
