--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,8 +9,11 @@
     <h1>Welcome to StrikeData</h1>
     <p>Your one-stop platform for comprehensive MLB statistics.</p>
 
+    <!--
     <div class="buttons">
         <a class="btn" href="/TeamData">View Team Data</a>
-        <!-- TODO: DESCOMENTAR EN CASO QUE VAYA A PONER ALGO EN LA POLÍTICA DE PRIVACIDAD <a class="btn secondary" href="/Privacy">Privacy Policy</a>-->
+         TODO: DESCOMENTAR EN CASO QUE VAYA A PONER ALGO EN LA POLÍTICA DE PRIVACIDAD <a class="btn secondary" href="/Privacy">Privacy Policy</a>
     </div>
+    -->
+    
 </div>
