--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -9,7 +9,7 @@
     <h1 class="page-title">Team Data</h1>
 
     <div class="buttons">
-        <a class="btn" href="/TeamData/">Records</a>
+        <a class="btn" href="/TeamData/">Matches</a>
         <a class="btn" href="/TeamData/Hitting">Hitting</a>
         <a class="btn" href="/TeamData/Pitching">Pitching</a>
         <a class="btn" href="/TeamData/Fielding">Fielding</a>
