--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <a href="/">Home</a>
             <a href="/TeamData">Teams</a>
             <a href="/">Players</a>
-            <a href="/">Schedule</a>
+            <a href="/">Matches</a>
         </nav>
     </header>
     <main>
