--- a/Pages/TeamData/Index.cshtml
+++ b/Pages/TeamData/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="welcome">
-    <img src="/images/MLB_teams.jpg" alt="Baseball" />
     <h1 class="page-title">Team Data</h1>
+    <img src="/images/MLB_teams.jpg" alt="M" />
 
     <div class="buttons">
         <a class="btn" href="/TeamData/Hitting">Hitting</a>
