--- a/Pages/TeamData/Others.cshtml
+++ b/Pages/TeamData/Others.cshtml
@@ -11,5 +11,5 @@
     <a class="btn" href="/TeamData/Schedule">Schedule</a>
     <!-- Win Trends y Curious Facts todavía no están implementados; redirigen al TeamData -->
     <a class="btn" href="/TeamData">Win Trends</a>
-    <a class="btn" href="/TeamData">Curious Facts</a>
+    <a class="btn" href="/TeamData/CuriousFacts">Curious Facts</a>
 </div>
