Player Stats Immported

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav>
             <a href="/">Home</a>
             <a href="/TeamData">Teams</a>
-            <a href="/">Players</a>
+            <a href="/PlayerData">Players</a>
             <a href="/">Matches</a>
         </nav>
     </header>
