Player Hitting & Pitching Implemmented

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,6 @@
 <div class="welcome">
     <img src="/images/bating.jpg" alt="Baseball" />
     <h1>Welcome to StrikeData</h1>
-    <p>Your one-stop platform for comprehensive MLB statistics.</p>
+    <p>Your one-stop platform for comprehensive Baseball statistics.</p>
     
 </div>
