--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -219,12 +219,13 @@ footer {
     cursor: pointer;
 }
 
+
 .pitching-table {
-    font-size: 1.0rem;
+    font-size: 0.85rem;
 }
 .pitching-table th,
 .pitching-table td {
-    padding: 0.75rem;
+    padding: 0.6rem 0.7rem;
     white-space: nowrap; /* evita saltos de línea */
 }
 
